<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negroGame"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/jugadorGame" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/tiempoGame" />

        <Chronometer
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/berkshire_swash" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/cartasbaseGame" />

        <TextView
            android:id="@+id/numcartas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/cero" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/redealsGame" />

        <TextView
            android:id="@+id/redeals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/cero" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/redeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="#00FFFFFF"
            android:onClick="onredeal"
            android:scaleType="fitCenter"
            android:tint="#00FFFFFF"
            app:srcCompat="@drawable/suffle1" />

        <ImageButton
            android:id="@+id/stack1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardclubsa" />

        <ImageButton
            android:id="@+id/stack2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardspadesa" />

        <ImageButton
            android:id="@+id/stack3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardheartsa" />

        <ImageButton
            android:id="@+id/stack4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="fitCenter"
            android:tint="#00FFFFFF"
            app:srcCompat="@drawable/carddiamondsa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/deck1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardback_blue5" />

        <ImageButton
            android:id="@+id/deck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck2"
            android:scaleType="fitCenter"
            android:tint="#00FFFFFF"
            app:srcCompat="@drawable/cardback_blue5" />

        <ImageButton
            android:id="@+id/deck3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck3"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardback_blue5" />

        <ImageButton
            android:id="@+id/deck4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck4"
            android:scaleType="fitCenter"
            android:tint="#00FFFFFF"
            app:srcCompat="@drawable/cardback_blue5" />

        <ImageButton
            android:id="@+id/deck5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck5"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardback_blue5" />

        <ImageButton
            android:id="@+id/deck6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck6"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardback_blue5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/deck7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck7"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardback_blue5" />

        <ImageButton
            android:id="@+id/deck8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck8"
            android:scaleType="fitCenter"
            android:tint="#00FFFFFF"
            app:srcCompat="@drawable/cardback_blue5" />

        <ImageButton
            android:id="@+id/deck9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck9"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardback_blue5" />

        <ImageButton
            android:id="@+id/deck10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#003C3F41"
            android:onClick="ondeck10"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardback_blue5" />

        <ImageButton
            android:id="@+id/deck11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck11"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardback_blue5" />

        <ImageButton
            android:id="@+id/deck12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="ondeck12"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardback_blue5" />
    </LinearLayout>
</LinearLayout>